tests/cn/previously_inconsistent_assumptions2.c.test
return code: 1
./previously_inconsistent_assumptions2.exec.c:92:11: error: use of undeclared identifier 's'
   92 |   return &s;
      |           ^
./previously_inconsistent_assumptions2.exec.c:97:12: error: use of undeclared identifier 's'
   97 |   memcpy((&s), ptr, sizeof(signed int));
      |            ^
2 errors generated.
Failed to compile 'previously_inconsistent_assumptions2.exec.c' in /tmp.